# french-words

./: .gitignore  README.md  app.db  build_linux.sh  build_windows.bat  config.py  makefile  pyproject.toml  run.py
app/: __imports__.py  __init__.py  models.py  views.py  widgets.py
app/static/appbuilder/css/: bootstrap.min.css
app/templates/appbuilder/: navbar_right.html
app/templates/appbuilder/general/model/: random_word.html
app/templates/appbuilder/general/widgets/: random.html
migrations/versions/: 4768fdbe3936_initial_migration.py
static/appbuilder/css/themes/: flatly-overidden.css
